fixed some bugs related to responsiveness on smaller devices

--- a/src/App.css
+++ b/src/App.css
@@ -364,16 +364,9 @@ a {
     .summary__details__center > .col-6 {
         text-align: center;
     }
-    
-    .header {
-        background: url('./images/gamer.jpg');
-        width: 100%;
-        height: 100vh;
-        object-fit:scale-down;
-    }
 }
 
-@media (max-width: 400) {
+@media (max-width: 450px) {
     .col-3 {
         width: 100%;
     }
@@ -385,5 +378,40 @@ a {
     }
      .details__image {
     padding-right: 0;
+    }
+    .product__img {
+    width: 100%;
+    height: 300px;
+    overflow: hidden;
+    }
+
+    .header {
+    background-image: url('./images/header-400.jpg');
+    width: 100%;
+    height: 100vh;
+    background-repeat: no-repeat;
+    object-fit: cover;
+    }
+    .actualPrice {
+    font-size: 15px;
+    }
+    .product__discount__price {
+    font-size: 15px;
+    }
+    .price-row {
+        display: flex;
+        wrap: nowrap;
+        justify-content: space-between;
+        width: 100%;
+    }
+}
+
+@media (max-width: 350px) {
+    .header {
+        background-image: url('./images/header-350.jpg');
+        width: 100%;
+        height: 100vh;
+        background-repeat: no-repeat;
+        object-fit: cover;
     }
 }
